--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+             "./node_modules/jquery/dist/jquery.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
@@ -81,9 +83,12 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+             
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
