--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@ngmodule/material-carousel": "^0.3.1",
     "angular-common": "^0.1.0",
     "angular-hammer": "^2.2.0",
-    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng2-validation": "^4.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "web-webpack-plugin": "^4.5.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -37,12 +37,14 @@
     "@angular/cli": "~7.3.5",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "bootstrap": "^4.3.1",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "^3.3.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
